Fix screen flicker on resize & ResizeObserver warning

--- a/packages/js-draw/src/Editor.scss
+++ b/packages/js-draw/src/Editor.scss
@@ -80,6 +80,9 @@
 	flex-grow: 2;
 	flex-shrink: 1;
 	min-height: 100px;
+	min-width: 0;
+	width: 100%;
+	height:	100%;
 }
 
 .imageEditorContainer .imageEditorRenderArea canvas {
